# sssssssssampler

./: .gitignore  ASCII_DISPLAY_ROADMAP.md  BUILD_MANIFEST.txt  CLAUDE.md  Cargo.toml  DISPLAY_BRIDGE_COMPLETE.md  EXECUTION_SUMMARY_COMPLETED.md  FINAL_DELIVERY.md  GPU_RENDERING_STATUS.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  RENDERING_STRATEGY_FINAL.md  SESSION_REPORT.md  SHIPPED.txt  ascii.txt  install-dev.sh  install.sh  installer.sh  libmotion.rlib
.github/workflows/: build.yml  deploy-site.yml
assets/: img01.txt  img02.txt  img03.txt  img04.txt  img05.txt  img06.txt  img07.txt  img08.txt  img09.txt  img10.txt  img11.txt  img12.txt  img13.txt  img14.txt  img15.txt  img16.txt  img17.txt  img18.txt  img19.txt  img20.txt  style.css
benches/: render_bench.rs
docs/: ASCII_ANIMATION_SYSTEM.md  RENDERING.md  braille-font-picker.html  filter-research.md  theme-editor.html  v3.design.txt
docs/superpowers/plans/: 2026-03-21-gpu-ascii-rendering-system.md  2026-03-23-ascii-animation-v5.md
docs/superpowers/specs/: 2026-03-23-ascii-animation-v5-design.md
site/: index.html
src/: anim_state.rs  ascii_bank.rs  ascii_grid_view.rs  ascii_image_display.rs  audio_feed.rs  editor.rs  editor_view.rs  lib.rs  parameter_remapping.rs
src/render/: ascii_render.rs  audio_analysis.rs  color_system.rs  glyph_atlas.rs  instancing.rs  layer_engine.rs  mod.rs  motion.rs  offscreen.rs  ui_sync.rs
src/render/shaders/: render.wgsl
tests/: test_parameter_mapping.rs  test_rendering_e2e.rs
xtask/: Cargo.toml
xtask/src/: main.rs
