[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "sssssssssampler"
version = "0.1.0"
edition = "2021"
description = "SP-1200 / S950 style sample rate & bit depth reducer"

[lib]
# Produces the shared library that hosts load as a VST3/CLAP plugin
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git", package = "nih_plug_vizia" }
wgpu = "0.20"
wgpu-types = "0.20"
bytemuck = { version = "1", features = ["derive"] }
raw-window-handle = "0.6"

[[bench]]
name = "render_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
strip = true
